Inicial-main-h1-iconsocial

--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <h1></h1>
+        <p></p>
+        <h2></h2>
+        <div class="icon-social">
+            <img src="" alt="git-icon">
+            <img src="" alt="linkedin-icon">
+            <img src="" alt="mail-coin">
+        </div>
+    </main>
+
+    <section id="about">
+
+    </section>
+
+    <section id="proyects">
+
+    </section>
+
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
