main-hero-setup0.1

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
     </header>
 
     <main>
-        <h1></h1>
-        <p></p>
-        <h2></h2>
+        <div class="logo"><img src="images/image_3-removebg-preview.png" alt="logo"></div>
+        <h1>Hey, I’m Johan Lasso</h1>
+        <p>Electronics engineer involved in the world of programming.</p>
+        <h2>Frontend Developer and Data Scientist</h2>
         <div class="icon-social">
             <img src="" alt="git-icon">
             <img src="" alt="linkedin-icon">
@@ -42,7 +43,7 @@
     </section>
 
     <footer>
-        
+
     </footer>
 </body>
 
