--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <div class="icon"><img src="images/image_3-removebg-preview.png" alt="icon"></div>
+        <div class="icon"><a href="index.html"><img src="images/image_3-removebg-preview.png" alt="icon"></a></div>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -23,7 +23,7 @@
     </header>
 
     <main>
-        <div class="logo"><img src="images/image_3-removebg-preview.png" alt="logo"></div>
+        <div class="logo"><a href="index.html"><img src="images/image_3-removebg-preview.png" alt="logo"></a></div>
         <h1>Hey, I’m Johan Lasso</h1>
         <p>Electronics engineer involved in the world of programming.</p>
         <h2>Frontend Developer and Data Scientist</h2>
