--- a/index.html
+++ b/index.html
@@ -53,8 +53,53 @@
         </div>
     </main>
 
-    <section id="about">
-
+    <section id="about" class="aboutme">
+        <h2><span>About Me</span></h2>
+        <div class="about__content">
+            <div class="zone-aboutme">
+                <h3>Get to know me!</h3>
+                <p>I'm Johan Lasso, an <strong>Electronics Engineer</strong> immersed in the world of programming. My approach
+                    combines the technical prowess of electronic engineering with the creativity and logic of
+                    <strong>Frontend Development</strong> and <strong>Data Science</strong>.</p>
+                <p>My passion for programming started with electronics, merging both worlds to create innovative and
+                    efficient <strong>solutions</strong>. This led me to dive into <strong>Frontend Development</strong>, creating engaging interfaces
+                    that deliver exceptional user experiences. In addition, my interest in <strong>Data Science</strong> led me to
+                    explore analytics and <strong>Machine Learning</strong>, to extract insights from complex <strong>Data sets</strong>.</p>
+                <p>I'm open to <strong>Job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity
+                    that matches my skills and experience then don't hesitate to contact me.</p>
+            </div>
+            <div class="skills">
+                <h3>My Skills</h3>
+                <h4>programming Lenguas</h4>
+                <ul>
+                    <li>C</li>
+                    <li>C++</li>
+                    <li>Python</li>
+                    <li>Matlab</li>
+                </ul>
+                <h4>Web Development</h4>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>SASS</li>
+                    <li>GIT</li>
+                    <li>Github</li>
+                    <li>Django</li>
+                </ul>
+                <h4>Data Science</h4>
+                <ul>
+                    <li>Anaconda</li>
+                    <li>Jupyter Notebooks</li>
+                    <li>Spyder</li>
+                    <li>Pandas</li>
+                    <li>Scikit-Learn</li>
+                    <li>Numpy</li>
+                    <li>SQL</li>
+                    <li>Matplotlib</li>
+                </ul>
+            </div>
+        </div>
     </section>
 
     <section id="proyects">
