--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <p>Electronics engineer involved in the world of programming.</p>
         <h2>Frontend Developer and Data Scientist</h2>
         <div class="icon-social">
-            <a href="http://" target="_blank" rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg"
-                    width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+            <a href="https://github.com/Laxxoby" target="_blank" rel="noopener noreferrer"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github"
+                    viewBox="0 0 16 16">
                     <path
                         d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
                 </svg></a>
@@ -58,56 +59,77 @@
         <div class="about__content">
             <div class="zone-aboutme">
                 <h3>Get to know me!</h3>
-                <p>I'm Johan Lasso, an <strong>Electronics Engineer</strong> immersed in the world of programming. My approach
+                <p>I'm Johan Lasso, an <strong>Electronics Engineer</strong> immersed in the world of programming. My
+                    approach
                     combines the technical prowess of electronic engineering with the creativity and logic of
-                    <strong>Frontend Development</strong> and <strong>Data Science</strong>.</p>
+                    <strong>Frontend Development</strong> and <strong>Data Science</strong>.
+                </p>
                 <p>My passion for programming started with electronics, merging both worlds to create innovative and
-                    efficient <strong>solutions</strong>. This led me to dive into <strong>Frontend Development</strong>, creating engaging interfaces
-                    that deliver exceptional user experiences. In addition, my interest in <strong>Data Science</strong> led me to
-                    explore analytics and <strong>Machine Learning</strong>, to extract insights from complex <strong>Data sets</strong>.</p>
-                <p>I'm open to <strong>Job</strong> opportunities where I can contribute, learn and grow. If you have a good opportunity
+                    efficient <strong>solutions</strong>. This led me to dive into <strong>Frontend
+                        Development</strong>, creating engaging interfaces
+                    that deliver exceptional user experiences. In addition, my interest in <strong>Data Science</strong>
+                    led me to
+                    explore analytics and <strong>Machine Learning</strong>, to extract insights from complex
+                    <strong>Data sets</strong>.
+                </p>
+                <p>I'm open to <strong>Job</strong> opportunities where I can contribute, learn and grow. If you have a
+                    good opportunity
                     that matches my skills and experience then don't hesitate to contact me.</p>
+                    <a href="http://" target="_blank" rel="noopener noreferrer">CONTACT</a>
             </div>
             <div class="skills">
                 <h3>My Skills</h3>
-                <h4>programming Lenguas</h4>
+                <h4>programming Lenguas and Tools</h4>
                 <ul>
-                    <li>C</li>
-                    <li>C++</li>
-                    <li>Python</li>
-                    <li>Matlab</li>
+                    <li><abbr title="C"><img src="images/icons8-c-programming.svg" alt="C"></abbr></li>
+                    <li> <abbr title="C++"><img src="images/icons8-c.svg" alt="C++"></abbr></li>
+                    <li><abbr title="Python"><img src="images/icons8-python.svg" alt="Python"></abbr></li>
+                    <li><abbr title="Matlab"><img src="images/icons8-matlab.svg" alt="Matlab"></abbr></li>
+                    <li><abbr title="Git"><img src="images/icons8-git.svg" alt="Git"></abbr></li>
+                    <li><a href="https://github.com/Laxxoby" target="_blank" rel="noopener noreferrer"><svg
+                                xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="white"
+                                class="bi bi-github" viewBox="0 0 16 16">
+                                <path
+                                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                            </svg></a></li>
                 </ul>
                 <h4>Web Development</h4>
                 <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>SASS</li>
-                    <li>GIT</li>
-                    <li>Github</li>
-                    <li>Django</li>
+                    <li><abbr title="HTML"><img src="images/icons8-html.svg" alt="HTML"></abbr></li>
+                    <li><abbr title="CSS"><img src="images/icons8-css.svg" alt="CSS"></abbr></li>
+                    <li><abbr title="JavaScript"><img src="images/icons8-javascript.svg" alt="JavaScript"></abbr></li>
+                    <li><abbr title="SASS"><img src="images/icons8-sass-avatar.svg" alt="SASS"></abbr></li>
+                    <li><abbr title="Django"><img src="images/icons8-django.svg" alt="Django"></abbr></li>
                 </ul>
                 <h4>Data Science</h4>
                 <ul>
-                    <li>Anaconda</li>
-                    <li>Jupyter Notebooks</li>
-                    <li>Spyder</li>
-                    <li>Pandas</li>
-                    <li>Scikit-Learn</li>
-                    <li>Numpy</li>
-                    <li>SQL</li>
-                    <li>Matplotlib</li>
+                    <li><abbr title="Anaconda"><img src="images/icons8-anaconda.svg" alt="Anaconda"></abbr></li>
+                    <li><abbr title="Jupyter Notebooks"><img src="images/icons8-jupyter.svg" alt="Jupyter Notebooks"></abbr></li>
+                    <li><abbr title="Spyder"><img src="images/icons8-spyder-ide-5.svg" alt="Spyder"></abbr></li>
+                    <li><abbr title="Pandas Python"><img src="images/icons8-pandas.svg" alt="Pandas Python"></abbr></li>
+                    <li><abbr title="Scikit-Learn"><img src="images/scikit-learn.svg" alt="Scikit-Learn"></abbr></li>
+                    <li><abbr title="Numpy"><img src="images/icons8-numpy.svg" alt="Numpy"></abbr></li>
+                    <li><abbr title="SQL"><img src="images/filetype-sql.svg" alt="SQL"></abbr></li>
+                    <li><abbr title="Matplotlib"><img src="images/Matplotlib.svg" alt="Matplotlib"></abbr></li>
                 </ul>
             </div>
         </div>
     </section>
 
-    <section id="proyects">
-
+    <section id="proyects" class="meproyects">
+        <h2><span>proyects</span></h2>
     </section>
 
-    <footer>
+    <section id="contact" class="contactme">
+        <h2><span>Contact</span></h2>
+    </section>
 
+
+
+    <footer>
+        <div class="social"></div>
+        <div class="line"></div>
+        <p> <a href="http://" target="_blank" rel="noopener noreferrer">Designed & Built by Johan Lasso</a></p>
     </footer>
 </body>
 
