--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <div class="icon"><a href="index.html"><img src="images/image_3-removebg-preview.png" alt="icon"></a></div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Proyects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#proyects">Proyects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
+    <main id="home">
         <div class="logo"><a href="index.html"><img src="images/image_3-removebg-preview.png" alt="logo"></a></div>
         <h1>Hey, I’m Johan Lasso</h1>
         <p>Electronics engineer involved in the world of programming.</p>
@@ -75,7 +75,7 @@
                 <p>I'm open to <strong>Job</strong> opportunities where I can contribute, learn and grow. If you have a
                     good opportunity
                     that matches my skills and experience then don't hesitate to contact me.</p>
-                    <a href="http://" target="_blank" rel="noopener noreferrer">CONTACT</a>
+                <a href="http://" target="_blank" rel="noopener noreferrer">CONTACT</a>
             </div>
             <div class="skills">
                 <h3>My Skills</h3>
@@ -104,11 +104,12 @@
                 <h4>Data Science</h4>
                 <ul>
                     <li><abbr title="Anaconda"><img src="images/icons8-anaconda.svg" alt="Anaconda"></abbr></li>
-                    <li><abbr title="Jupyter Notebooks"><img src="images/icons8-jupyter.svg" alt="Jupyter Notebooks"></abbr></li>
+                    <li><abbr title="Jupyter Notebooks"><img src="images/icons8-jupyter.svg"
+                                alt="Jupyter Notebooks"></abbr></li>
                     <li><abbr title="Spyder"><img src="images/icons8-spyder-ide-5.svg" alt="Spyder"></abbr></li>
                     <li><abbr title="Pandas Python"><img src="images/icons8-pandas.svg" alt="Pandas Python"></abbr></li>
                     <li><abbr title="Scikit-Learn"><img src="images/scikit-learn.svg" alt="Scikit-Learn"></abbr></li>
-                    <li><abbr title="Numpy"><img src="images/icons8-numpy.svg" alt="Numpy"></abbr></li>
+                    <li><img src="images/icons8-numpy.svg" alt="Numpy" title="Numpy"></li>
                     <li><abbr title="SQL"><img src="images/filetype-sql.svg" alt="SQL"></abbr></li>
                     <li><abbr title="Matplotlib"><img src="images/Matplotlib.svg" alt="Matplotlib"></abbr></li>
                 </ul>
@@ -118,6 +119,125 @@
 
     <section id="proyects" class="meproyects">
         <h2><span>proyects</span></h2>
+        <ul class="proyects-list">
+            <li class="item-proyect reverse-proyect">
+                <div class="body-item-proyect right-proyect-body">
+                    <h3>Name Proyect</h3>
+                    <div class="description">
+                        A web app for visualizing personalized Spotify data. View your top artists,
+                        top
+                        tracks, recently played tracks, and detailed audio information about each track. Create and save
+                        new
+                        playlists of recommended tracks based on your existing playlists and more.</div>
+                    <ul class="tools">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                    </ul>
+                    <div class="icon-proyect">
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-github">
+                                <title>GitHub</title>
+                                <path
+                                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                                </path>
+                            </svg></a>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-external-link">
+                                <title>External Link</title>
+                                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                <polyline points="15 3 21 3 21 9"></polyline>
+                                <line x1="10" y1="14" x2="21" y2="3"></line>
+                            </svg></a>
+                    </div>
+                </div>
+                <div class="imagen-proyect">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <div class="overlay"></div>
+                    <img src="images/proyect1.png" alt="Imagen Proyect">
+                    </a>
+                </div>
+            </li>
+            <li class="item-proyect">
+                <div class="body-item-proyect left-proyect-body">
+                    <h3>Name Proyect</h3>
+                    <div class="description">A web app for visualizing personalized Spotify data. View your top artists,
+                        top
+                        tracks, recently played tracks, and detailed audio information about each track. Create and save
+                        new
+                        playlists of recommended tracks based on your existing playlists and more.</div>
+                    <ul class="tools">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                    </ul>
+                    <div class="icon-proyect">
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-github">
+                                <title>GitHub</title>
+                                <path
+                                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                                </path>
+                            </svg></a>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-external-link">
+                                <title>External Link</title>
+                                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                <polyline points="15 3 21 3 21 9"></polyline>
+                                <line x1="10" y1="14" x2="21" y2="3"></line>
+                            </svg></a>
+                    </div>
+                </div>
+                <div class="imagen-proyect"><a href="http://" target="_blank" rel="noopener noreferrer">
+                        <img src="images/proyect1.png" alt="Imagen Proyect"></a></div>
+            </li>
+            <li class="item-proyect">
+                <div class="body-item-proyect">
+                    <h3>Name Proyect</h3>
+                    <div class="description">A web app for visualizing personalized Spotify data. View your top artists,
+                        top
+                        tracks, recently played tracks, and detailed audio information about each track. Create and save
+                        new
+                        playlists of recommended tracks based on your existing playlists and more.</div>
+                    <ul class="tools">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                    </ul>
+                    <div class="icon-proyect">
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-github">
+                                <title>GitHub</title>
+                                <path
+                                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                                </path>
+                            </svg></a>
+                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-external-link">
+                                <title>External Link</title>
+                                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                <polyline points="15 3 21 3 21 9"></polyline>
+                                <line x1="10" y1="14" x2="21" y2="3"></line>
+                            </svg></a>
+                    </div>
+                </div>
+                <div class="imagen-proyect"><a href="http://" target="_blank" rel="noopener noreferrer">
+                        <img src="images/proyect1.png" alt="Imagen Proyect"></a></div>
+            </li>
+        </ul>
+
     </section>
 
     <section id="contact" class="contactme">
