updated-titles-skills

--- a/index.html
+++ b/index.html
@@ -103,15 +103,14 @@
                 </ul>
                 <h4>Data Science</h4>
                 <ul>
-                    <li><abbr title="Anaconda"><img src="images/icons8-anaconda.svg" alt="Anaconda"></abbr></li>
-                    <li><abbr title="Jupyter Notebooks"><img src="images/icons8-jupyter.svg"
-                                alt="Jupyter Notebooks"></abbr></li>
-                    <li><abbr title="Spyder"><img src="images/icons8-spyder-ide-5.svg" alt="Spyder"></abbr></li>
-                    <li><abbr title="Pandas Python"><img src="images/icons8-pandas.svg" alt="Pandas Python"></abbr></li>
-                    <li><abbr title="Scikit-Learn"><img src="images/scikit-learn.svg" alt="Scikit-Learn"></abbr></li>
+                    <li><img src="images/icons8-anaconda.svg" alt="Anaconda" title="Anaconda"></li>
+                    <li><img src="images/icons8-jupyter.svg" alt="Jupyter Notebooks" title="Jupyter Notebooks"></li>
+                    <li><img src="images/icons8-spyder-ide-5.svg" alt="Spyder" title="Spyder"></li>
+                    <li><img src="images/icons8-pandas.svg" alt="Pandas Python" title="Pandas Python"></li>
+                    <li><img src="images/scikit-learn.svg" alt="Scikit-Learn" title="Scikit-Learn"></li>
                     <li><img src="images/icons8-numpy.svg" alt="Numpy" title="Numpy"></li>
-                    <li><abbr title="SQL"><img src="images/filetype-sql.svg" alt="SQL"></abbr></li>
-                    <li><abbr title="Matplotlib"><img src="images/Matplotlib.svg" alt="Matplotlib"></abbr></li>
+                    <li><img src="images/filetype-sql.svg" alt="SQL" title="SQL"></li>
+                    <li><img src="images/Matplotlib.svg" alt="Matplotlib" title="Matplotlib"></li>
                 </ul>
             </div>
         </div>
@@ -157,8 +156,8 @@
                 </div>
                 <div class="imagen-proyect">
                     <a href="http://" target="_blank" rel="noopener noreferrer">
-                    <div class="overlay"></div>
-                    <img src="images/proyect1.png" alt="Imagen Proyect">
+                        <div class="overlay"></div>
+                        <img src="images/proyect1.png" alt="Imagen Proyect">
                     </a>
                 </div>
             </li>
