updated2-titles-skills

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
                 <h3>My Skills</h3>
                 <h4>programming Lenguas and Tools</h4>
                 <ul>
-                    <li><abbr title="C"><img src="images/icons8-c-programming.svg" alt="C"></abbr></li>
-                    <li> <abbr title="C++"><img src="images/icons8-c.svg" alt="C++"></abbr></li>
-                    <li><abbr title="Python"><img src="images/icons8-python.svg" alt="Python"></abbr></li>
-                    <li><abbr title="Matlab"><img src="images/icons8-matlab.svg" alt="Matlab"></abbr></li>
-                    <li><abbr title="Git"><img src="images/icons8-git.svg" alt="Git"></abbr></li>
-                    <li><a href="https://github.com/Laxxoby" target="_blank" rel="noopener noreferrer"><svg
+                    <li><img src="images/icons8-c-programming.svg" alt="C" title="C"></li>
+                    <li><img src="images/icons8-c.svg" alt="C++" title="C++"></li>
+                    <li><img src="images/icons8-python.svg" alt="Python" title="Python"></li>
+                    <li><img src="images/icons8-matlab.svg" alt="Matlab" title="Matlab"></li>
+                    <li><img src="images/icons8-git.svg" alt="Git"  title="Git"></li>
+                    <li><a href="https://github.com/Laxxoby" title="GitHub" target="_blank" rel="noopener noreferrer"><svg
                                 xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="white"
                                 class="bi bi-github" viewBox="0 0 16 16">
                                 <path
@@ -95,11 +95,11 @@
                 </ul>
                 <h4>Web Development</h4>
                 <ul>
-                    <li><abbr title="HTML"><img src="images/icons8-html.svg" alt="HTML"></abbr></li>
-                    <li><abbr title="CSS"><img src="images/icons8-css.svg" alt="CSS"></abbr></li>
-                    <li><abbr title="JavaScript"><img src="images/icons8-javascript.svg" alt="JavaScript"></abbr></li>
-                    <li><abbr title="SASS"><img src="images/icons8-sass-avatar.svg" alt="SASS"></abbr></li>
-                    <li><abbr title="Django"><img src="images/icons8-django.svg" alt="Django"></abbr></li>
+                    <li><img src="images/icons8-html.svg" alt="HTML" title="HTML"></li>
+                    <li><img src="images/icons8-css.svg" alt="CSS" title="CSS"></li>
+                    <li><img src="images/icons8-javascript.svg" alt="JavaScript" title="JavaScript"></li>
+                    <li><img src="images/icons8-sass-avatar.svg" alt="SASS" title="SASS"></li>
+                    <li><img src="images/icons8-django.svg" alt="Django" title="Django"></li>
                 </ul>
                 <h4>Data Science</h4>
                 <ul>
