--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
                     <li><img src="images/icons8-c.svg" alt="C++" title="C++"></li>
                     <li><img src="images/icons8-python.svg" alt="Python" title="Python"></li>
                     <li><img src="images/icons8-matlab.svg" alt="Matlab" title="Matlab"></li>
-                    <li><img src="images/icons8-git.svg" alt="Git"  title="Git"></li>
-                    <li><a href="https://github.com/Laxxoby" title="GitHub" target="_blank" rel="noopener noreferrer"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="white"
-                                class="bi bi-github" viewBox="0 0 16 16">
+                    <li><img src="images/icons8-git.svg" alt="Git" title="Git"></li>
+                    <li><a href="https://github.com/Laxxoby" title="GitHub" target="_blank"
+                            rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"
+                                fill="white" class="bi bi-github" viewBox="0 0 16 16">
                                 <path
                                     d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
                             </svg></a></li>
@@ -121,13 +121,10 @@
         <ul class="proyects-list">
             <li class="item-proyect reverse-proyect">
                 <div class="body-item-proyect right-proyect-body">
-                    <h3>Name Proyect</h3>
+                    <h3>Aprendiendo HTML y CSS</h3>
                     <div class="description">
-                        A web app for visualizing personalized Spotify data. View your top artists,
-                        top
-                        tracks, recently played tracks, and detailed audio information about each track. Create and save
-                        new
-                        playlists of recommended tracks based on your existing playlists and more.</div>
+                        A web application to see the learning process I took to learn HTML and CSS, plus explanations
+                        and examples with direct links to reliable documentation designed for new people.</div>
                     <ul class="tools">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -143,7 +140,8 @@
                                     d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
                                 </path>
                             </svg></a>
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <a href="https://laxxoby.github.io/Aprendiento_HTML_CSS/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                 class="feather feather-external-link">
@@ -155,7 +153,7 @@
                     </div>
                 </div>
                 <div class="imagen-proyect">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                    <a href="https://laxxoby.github.io/Aprendiento_HTML_CSS/" target="_blank" rel="noopener noreferrer">
                         <div class="overlay"></div>
                         <img src="images/proyect1.png" alt="Imagen Proyect">
                     </a>
@@ -163,12 +161,49 @@
             </li>
             <li class="item-proyect">
                 <div class="body-item-proyect left-proyect-body">
-                    <h3>Name Proyect</h3>
-                    <div class="description">A web app for visualizing personalized Spotify data. View your top artists,
-                        top
-                        tracks, recently played tracks, and detailed audio information about each track. Create and save
-                        new
-                        playlists of recommended tracks based on your existing playlists and more.</div>
+                    <h3>Rick & Morty's character status</h3>
+                    <div class="description">An information table style web site that shows the profiles and some useful
+                        data about the characters of the famous Rick and Mort series, personal project to learn how to
+                        use an <strong>API</strong>.</div>
+                    <ul class="tools">
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JS</li>
+                    </ul>
+                    <div class="icon-proyect">
+                        <a href="https://github.com/Laxxoby/RickandMortyApp" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-github">
+                                <title>GitHub</title>
+                                <path
+                                    d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                                </path>
+                            </svg></a>
+                        <a href="https://laxxoby.github.io/RickandMortyApp/" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
+                                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="feather feather-external-link">
+                                <title>External Link</title>
+                                <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                                <polyline points="15 3 21 3 21 9"></polyline>
+                                <line x1="10" y1="14" x2="21" y2="3"></line>
+                            </svg></a>
+                    </div>
+                </div>
+                <div class="imagen-proyect">
+                    <a href="https://laxxoby.github.io/RickandMortyApp/" target="_blank" rel="noopener noreferrer">
+                        <div class="overlay"></div>
+                        <img src="images/proyect2.jpg" alt="Imagen Proyect">
+                    </a>
+                </div>
+            </li>
+            <li class="item-proyect reverse-proyect">
+                <div class="body-item-proyect right-proyect-body">
+                    <h3>Aprendiendo HTML y CSS</h3>
+                    <div class="description">
+                        A web application to see the learning process I took to learn HTML and CSS, plus explanations
+                        and examples with direct links to reliable documentation designed for new people.</div>
                     <ul class="tools">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -184,7 +219,8 @@
                                     d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
                                 </path>
                             </svg></a>
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <a href="https://laxxoby.github.io/Aprendiento_HTML_CSS/" target="_blank"
+                            rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                 class="feather feather-external-link">
@@ -195,24 +231,26 @@
                             </svg></a>
                     </div>
                 </div>
-                <div class="imagen-proyect"><a href="http://" target="_blank" rel="noopener noreferrer">
-                        <img src="images/proyect1.png" alt="Imagen Proyect"></a></div>
+                <div class="imagen-proyect">
+                    <a href="https://laxxoby.github.io/Aprendiento_HTML_CSS/" target="_blank" rel="noopener noreferrer">
+                        <div class="overlay"></div>
+                        <img src="images/proyect1.png" alt="Imagen Proyect">
+                    </a>
+                </div>
             </li>
             <li class="item-proyect">
-                <div class="body-item-proyect">
-                    <h3>Name Proyect</h3>
-                    <div class="description">A web app for visualizing personalized Spotify data. View your top artists,
-                        top
-                        tracks, recently played tracks, and detailed audio information about each track. Create and save
-                        new
-                        playlists of recommended tracks based on your existing playlists and more.</div>
+                <div class="body-item-proyect left-proyect-body">
+                    <h3>RickandMorty's character status</h3>
+                    <div class="description">An information table style web site that shows the profiles and some useful
+                        data about the characters of the famous Rick and Mort series, personal project to learn how to
+                        use an <strong>API</strong>.</div>
                     <ul class="tools">
                         <li>HTML</li>
                         <li>CSS</li>
                         <li>JS</li>
                     </ul>
                     <div class="icon-proyect">
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/Laxxoby/RickandMortyApp" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                 class="feather feather-github">
@@ -221,7 +259,7 @@
                                     d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
                                 </path>
                             </svg></a>
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <a href="https://laxxoby.github.io/RickandMortyApp/" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                 class="feather feather-external-link">
@@ -232,15 +270,22 @@
                             </svg></a>
                     </div>
                 </div>
-                <div class="imagen-proyect"><a href="http://" target="_blank" rel="noopener noreferrer">
-                        <img src="images/proyect1.png" alt="Imagen Proyect"></a></div>
+                <div class="imagen-proyect">
+                    <a href="https://laxxoby.github.io/RickandMortyApp/" target="_blank" rel="noopener noreferrer">
+                        <div class="overlay"></div>
+                        <img src="images/proyect2.jpg" alt="Imagen Proyect">
+                    </a>
+                </div>
             </li>
         </ul>
 
     </section>
 
     <section id="contact" class="contactme">
-        <h2><span>Contact</span></h2>
+        <h2><span>What’s Next?</span></h2>
+        <h3>Get In Touch</h3>
+        <p>I am currently looking for new opportunities, my inbox is always open. If you have a project I can help you with just say hi, I will do my best to get back to you as soon as possible!</p>
+        <a class="say-hello-buttom" href="http://" target="_blank" rel="noopener noreferrer">Say Hello</a>
     </section>
 
 
