--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Johan Camilo">
+    <meta name="description" content="My first web portfolio, created only with HTML and CSS">
+    <link rel="shortcut icon" href="images/image_3-removebg-preview.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
     <title>Johan Lasso</title>
