--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Johan Camilo">
     <meta name="description" content="My first web portfolio, created only with HTML and CSS">
-    <link rel="shortcut icon" href="images/image_3-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="style.css">
     <title>Johan Lasso</title>
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="icon"><a href="index.html"><img src="images/image_3-removebg-preview.png" alt="icon"></a></div>
+        <div class="icon"><a href="index.html"><img src="assets/images/logo.png" alt="icon"></a></div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -27,7 +27,7 @@
     </header>
 
     <main id="home">
-        <div class="logo"><a href="index.html"><img src="images/image_3-removebg-preview.png" alt="logo"></a></div>
+        <div class="logo"><a href="index.html"><img src="assets/images/logo.png" alt="logo"></a></div>
         <h1>Hey, I’m Johan Lasso</h1>
         <p>Electronics engineer involved in the world of programming.</p>
         <h2>Frontend Developer and Data Scientist</h2>
@@ -52,11 +52,11 @@
 
         </div>
         <div class="space"></div>
-        <div class="luces">
+        <a class="luces" href="#proyects">
             <div class="circulos"></div>
             <div class="circulos"></div>
             <div class="circulos"></div>
-        </div>
+        </a>
     </main>
 
     <section id="about" class="aboutme">
@@ -86,36 +86,40 @@
                 <h3>My Skills</h3>
                 <h4>programming Lenguas and Tools</h4>
                 <ul>
-                    <li><img src="images/icons8-c-programming.svg" alt="C" title="C"></li>
-                    <li><img src="images/icons8-c.svg" alt="C++" title="C++"></li>
-                    <li><img src="images/icons8-python.svg" alt="Python" title="Python"></li>
-                    <li><img src="images/icons8-matlab.svg" alt="Matlab" title="Matlab"></li>
-                    <li><img src="images/icons8-git.svg" alt="Git" title="Git"></li>
-                    <li><a href="https://github.com/Laxxoby" title="GitHub" target="_blank"
-                            rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48"
-                                fill="white" class="bi bi-github" viewBox="0 0 16 16">
+                    <li><img src="assets/icons/icons8-c-programming.svg" alt="C" title="C"></li>
+                    <li><img src="assets/icons/icons8-c.svg" alt="C++" title="C++"></li>
+                    <li><img src="assets/icons/icons8-python.svg" alt="Python" title="Python"></li>
+                    <li><img src="assets/icons/icons8-matlab.svg" alt="Matlab" title="Matlab"></li>
+                    <li><img src="assets/icons/icons8-git.svg" alt="Git" title="Git"></li>
+                    <li>
+                        <a href="https://github.com/Laxxoby" title="GitHub" target="_blank" rel="noopener noreferrer">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="white"
+                                class="bi bi-github" viewBox="0 0 16 16">
                                 <path
                                     d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
-                            </svg></a></li>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
                 <h4>Web Development</h4>
                 <ul>
-                    <li><img src="images/icons8-html.svg" alt="HTML" title="HTML"></li>
-                    <li><img src="images/icons8-css.svg" alt="CSS" title="CSS"></li>
-                    <li><img src="images/icons8-javascript.svg" alt="JavaScript" title="JavaScript"></li>
-                    <li><img src="images/icons8-sass-avatar.svg" alt="SASS" title="SASS"></li>
-                    <li><img src="images/icons8-django.svg" alt="Django" title="Django"></li>
+                    <li><img src="assets/icons/icons8-html.svg" alt="HTML" title="HTML"></li>
+                    <li><img src="assets/icons/icons8-css.svg" alt="CSS" title="CSS"></li>
+                    <li><img src="assets/icons/icons8-javascript.svg" alt="JavaScript" title="JavaScript"></li>
+                    <li><img src="assets/icons/icons8-sass-avatar.svg" alt="SASS" title="SASS"></li>
+                    <li><img src="assets/icons/icons8-django.svg" alt="Django" title="Django"></li>
                 </ul>
                 <h4>Data Science</h4>
                 <ul>
-                    <li><img src="images/icons8-anaconda.svg" alt="Anaconda" title="Anaconda"></li>
-                    <li><img src="images/icons8-jupyter.svg" alt="Jupyter Notebooks" title="Jupyter Notebooks"></li>
-                    <li><img src="images/icons8-spyder-ide-5.svg" alt="Spyder" title="Spyder"></li>
-                    <li><img src="images/icons8-pandas.svg" alt="Pandas Python" title="Pandas Python"></li>
-                    <li><img src="images/scikit-learn.svg" alt="Scikit-Learn" title="Scikit-Learn"></li>
-                    <li><img src="images/icons8-numpy.svg" alt="Numpy" title="Numpy"></li>
-                    <li><img src="images/filetype-sql.svg" alt="SQL" title="SQL"></li>
-                    <li><img src="images/Matplotlib.svg" alt="Matplotlib" title="Matplotlib"></li>
+                    <li><img src="assets/icons/icons8-anaconda.svg" alt="Anaconda" title="Anaconda"></li>
+                    <li><img src="assets/icons/icons8-jupyter.svg" alt="Jupyter Notebooks" title="Jupyter Notebooks">
+                    </li>
+                    <li><img src="assets/icons/icons8-spyder-ide-5.svg" alt="Spyder" title="Spyder"></li>
+                    <li><img src="assets/icons/icons8-pandas.svg" alt="Pandas Python" title="Pandas Python"></li>
+                    <li><img src="assets/icons/scikit-learn.svg" alt="Scikit-Learn" title="Scikit-Learn"></li>
+                    <li><img src="assets/icons/icons8-numpy.svg" alt="Numpy" title="Numpy"></li>
+                    <li><img src="assets/icons/filetype-sql.svg" alt="SQL" title="SQL"></li>
+                    <li><img src="assets/icons/Matplotlib.svg" alt="Matplotlib" title="Matplotlib"></li>
                 </ul>
             </div>
         </div>
@@ -136,7 +140,8 @@
                         <li>JS</li>
                     </ul>
                     <div class="icon-proyect">
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/Laxxoby/Aprendiento_HTML_CSS" target="_blank"
+                            rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                 class="feather feather-github">
@@ -157,10 +162,11 @@
                             </svg></a>
                     </div>
                 </div>
+
                 <div class="imagen-proyect">
                     <a href="https://laxxoby.github.io/Aprendiento_HTML_CSS/" target="_blank" rel="noopener noreferrer">
                         <div class="overlay"></div>
-                        <img src="images/proyect1.png" alt="Imagen Proyect">
+                        <img src="assets/images/proyect1.png" alt="Imagen Proyect">
                     </a>
                 </div>
             </li>
@@ -184,7 +190,8 @@
                                 <path
                                     d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
                                 </path>
-                            </svg></a>
+                            </svg>
+                        </a>
                         <a href="https://laxxoby.github.io/RickandMortyApp/" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -193,13 +200,14 @@
                                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                                 <polyline points="15 3 21 3 21 9"></polyline>
                                 <line x1="10" y1="14" x2="21" y2="3"></line>
-                            </svg></a>
+                            </svg>
+                        </a>
                     </div>
                 </div>
                 <div class="imagen-proyect">
                     <a href="https://laxxoby.github.io/RickandMortyApp/" target="_blank" rel="noopener noreferrer">
                         <div class="overlay"></div>
-                        <img src="images/proyect2.jpg" alt="Imagen Proyect">
+                        <img src="assets/images/proyect2.jpg" alt="Imagen Proyect">
                     </a>
                 </div>
             </li>
@@ -223,7 +231,8 @@
                                 <path
                                     d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
                                 </path>
-                            </svg></a>
+                            </svg>
+                        </a>
                         <a href="https://laxxoby.github.io/Aprendiento_HTML_CSS/" target="_blank"
                             rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
