--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="My first web portfolio, created only with HTML and CSS">
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/main-style.css">
     <title>Johan Lasso</title>
 </head>
 
@@ -18,7 +18,7 @@
         <div class="icon"><a href="index.html"><img src="assets/images/logo.png" alt="icon"></a></div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#proyects">Proyects</a></li>
                 <li><a href="#contact">Contact</a></li>
