--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/image_3-removebg-preview.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style-contact.css">
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/main-style.css">
+
+    <link rel="stylesheet" href="css/style-contact.css">
     
 
     <title>Contact | Johan Lasso</title>
@@ -15,7 +16,7 @@
 <body>
 
     <header>
-        <div class="icon"><a href="index.html"><img src="images/image_3-removebg-preview.png" alt="icon"></a></div>
+        <div class="icon"><a href="index.html"><img src="assets/images/logo.png" alt="icon"></a></div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
