--- a/index.html
+++ b/index.html
@@ -213,17 +213,17 @@
             </li>
             <li class="item-proyect reverse-proyect">
                 <div class="body-item-proyect right-proyect-body">
-                    <h3>Aprendiendo HTML y CSS</h3>
+                    <h3>LaxxoFrame</h3>
                     <div class="description">
-                        A web application to see the learning process I took to learn HTML and CSS, plus explanations
-                        and examples with direct links to reliable documentation designed for new people.</div>
+                        An early-stage CSS framework characterized by purple colors, shadows, lights, and neon.
+                    </div>
                     <ul class="tools">
-                        <li>HTML</li>
                         <li>CSS</li>
                         <li>JS</li>
+                        <li>HTML</li>
                     </ul>
                     <div class="icon-proyect">
-                        <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/Laxxoby/LaxxoFramework" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                 class="feather feather-github">
@@ -233,8 +233,7 @@
                                 </path>
                             </svg>
                         </a>
-                        <a href="https://laxxoby.github.io/Aprendiento_HTML_CSS/" target="_blank"
-                            rel="noopener noreferrer">
+                        <a href="https://laxxoby.github.io/LaxxoFramework/" target="_blank" rel="noopener noreferrer">
                             <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none"
                                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                                 class="feather feather-external-link">
@@ -242,13 +241,14 @@
                                 <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                                 <polyline points="15 3 21 3 21 9"></polyline>
                                 <line x1="10" y1="14" x2="21" y2="3"></line>
-                            </svg></a>
+                            </svg>
+                        </a>
                     </div>
                 </div>
                 <div class="imagen-proyect">
-                    <a href="https://laxxoby.github.io/Aprendiento_HTML_CSS/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://laxxoby.github.io/LaxxoFramework/" target="_blank" rel="noopener noreferrer">
                         <div class="overlay"></div>
-                        <img src="images/proyect1.png" alt="Imagen Proyect">
+                        <img src="assets/images/proyect3.png" alt="Imagen Proyect">
                     </a>
                 </div>
             </li>
