--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <p>I'm open to <strong>Job</strong> opportunities where I can contribute, learn and grow. If you have a
                     good opportunity
                     that matches my skills and experience then don't hesitate to contact me.</p>
-                <a href="http://" target="_blank" rel="noopener noreferrer">CONTACT</a>
+                <a href="contact.html" rel="noopener noreferrer">CONTACT</a>
             </div>
             <div class="skills">
                 <h3>My Skills</h3>
