updated aboutme resposive

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </a>
                 </div>
             </li>
-            
+
             <li class="item-proyect">
                 <div class="body-item-proyect left-proyect-body">
                     <h3>Rick & Morty's character status</h3>
@@ -262,8 +262,8 @@
     <section id="contact" class="contactme">
         <h2><span>What’s Next?</span></h2>
         <h3>Get In Touch</h3>
-        <p>I am currently looking for new opportunities, my inbox is always open. If you have a project I can help you
-            with just say hi, I will do my best to get back to you as soon as possible!</p>
+        <p>I am currently looking for new opportunities, my inbox is always open.</p>
+        <p> If you have a project I can help you with just say hi, I will do my best to get back to you as soon as possible!</p>
         <a class="say-hello-buttom" href="contact.html" rel="noopener noreferrer">Say Hello</a>
     </section>
 
